--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body {
 }
 
 #country {
-    height: 45px;
+    height: 30px;
 }
 
 #description-container {
@@ -88,13 +88,18 @@ body {
     margin: .6rem 0;
 }
 
+#description {
+    font-weight: bold;
+    text-transform: capitalize;
+}
+
 #details-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#details-container #umidity {
+#details-container #humidity {
     border-right: 1px solid white;
     margin: .6rem;
     padding: .6rem;
